Append datepicker to .drayman-elements-container.

--- a/packages/elements/projects/datepicker/src/index.html
+++ b/packages/elements/projects/datepicker/src/index.html
@@ -15,6 +15,7 @@
   <script>
     createComponent('drayman-datepicker');
   </script>
+  <div class="drayman-elements-container"></div>
 </body>
 
 </html>
