--- a/packages/platform/app/public/index.html
+++ b/packages/platform/app/public/index.html
@@ -15,6 +15,8 @@
 
 <body>
     <drayman-element-advanced component="home"></drayman-element-advanced>
+
+    <div class="drayman-elements-container"></div>
 </body>
 
 </html>
