--- a/packages/framework/app/public/index.html
+++ b/packages/framework/app/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://unpkg.com/@angular/material@10.1.3/prebuilt-themes/indigo-pink.css">
     <link rel="stylesheet" href="https://unpkg.com/filepond@4.27.1/dist/filepond.min.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="/drayman-element.js"></script>
 </head>
 
