--- a/packages/elements/projects/table/src/index.html
+++ b/packages/elements/projects/table/src/index.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://unpkg.com/drayman-component-viewer"></script>
+  <script src="https://unpkg.com/cf-component-viewer"></script>
 </head>
 
 <body>
