--- a/packages/framework/app/public/index.html
+++ b/packages/framework/app/public/index.html
@@ -19,6 +19,8 @@
 <body>
     <drayman-element component="home"></drayman-element>
 
+    <div class="drayman-elements-container"></div>
+
     <div class="modal" id="modal-1" aria-hidden="true">
         <div tabindex="-1" data-micromodal-close>
             <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
