Add ability to reference DOM elements; Add port configuration.

--- a/packages/framework/app/public/index.html
+++ b/packages/framework/app/public/index.html
@@ -41,6 +41,9 @@
                     MicroModal.show('modal-1', {
                         onClose: (modal) => emit(onClose),
                     });
+                },
+                focus: async (data, element) => {
+                    element.focus();
                 }
             }),
         });
