Pass array of refs to Browser commands instead of a single one.

--- a/packages/framework/app/public/index.html
+++ b/packages/framework/app/public/index.html
@@ -42,7 +42,7 @@
                         onClose: (modal) => emit(onClose),
                     });
                 },
-                focus: async (data, element) => {
+                focus: async (data, [element]) => {
                     element.focus();
                 }
             }),
